<resources>
    <string name="app_name">Stress Reliever</string>
    <string name="StressFreeButton">Relieve My Stress!</string>
    <string name="got_stress">Got Stress?</string>
    <string name="need_advice">Need Advice?</string>
    <string name="tap_me_for_some_life_changing_advice">Give Me Advice!</string>
    <string name="got_stress_description">Got Stress?</string>
    <string name="select_advice">Select Advice</string>
    <string name="switches_between_screens">Switches between screens</string>
    <string name="select">Select Advice</string>
    <string name="advice">Gives advice when pressed</string>
    <string name="stress_free_day">Stress Free Day!</string>
    <string name="nothingSelected">Please select an option</string>
    <string name="todo">TODO</string>

    <string-array name="adviceArray">
        <item>Fun Fact</item>
        <item>Random Advice</item>
        <item>Life-changing Advice</item>
        <item>Another Fun Fact</item>
        <item>Did You Know?</item>
        <item>Just One More Thing...</item>
    </string-array>
</resources>
