<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.csstudios.developers.theultimatestressreliever.MainActivity">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_sync_black_24dp"
        android:id="@+id/btnSwitch"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stressButton"
        android:textColor="#ffffff"
        android:background="#037cbe"
        android:text="@string/StressFreeButton"
        android:layout_marginBottom="36dp"
        android:contentDescription="Stress Free Day!"
        android:layout_above="@+id/btnSwitch"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/title_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/got_stress_description"
        android:fontFamily="cursive"
        android:text="@string/got_stress"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ff9500"
        android:textIsSelectable="false"
        android:textSize="70sp"
        android:typeface="serif" />

</RelativeLayout>
